# virgo

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
src/: circuit.rs  circuit_builder.rs  circuit_props.rs  lib.rs  sumcheck.rs  util.rs
src/protocol/: mod.rs  prover.rs  verifier.rs
src/protocol/sumcheck/: mod.rs  phase_one.rs  phase_two.rs
src/sumcheck/: mod.rs  phase_one.rs  phase_two.rs
