[package]
name = "virgo"
version = "0.1.0"
edition = "2024"

[dependencies]
p3-field = "0.2.0"
p3-goldilocks = "0.2.0"
sum_check = { git = "https://github.com/sublinearlabs/sl-core.git" }
poly = { git = "https://github.com/sublinearlabs/sl-core.git" }
transcript = { git = "https://github.com/sublinearlabs/sl-core.git" }
